src/objects/Project__c.object
<CustomObject>
    <description>MG_Project</description>
    <fields>
        <fullName>AOI_ID__c</fullName>
        <label>AOI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_calc__c</fullName>
        <inlineHelpText>Automatically populated from Google</inlineHelpText>
        <label>Address (calc)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisory_Study__c</fullName>
        <label>Advisory Study #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Number__c</fullName>
        <label>Alternate Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Assessment_Description__c</fullName>
        <label>Tax Assessment Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessments_Dollar_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Tax Assessment($) N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessments_Dollar__c</fullName>
        <label>Additional Tax Assessments ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessments__c</fullName>
        <inlineHelpText>An overall tax rate, including a base tax rate</inlineHelpText>
        <label>Total Tax Rate (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Attribute_Sales_and_Marketing_Firm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attribute Sales and Marketing Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Age_of_Buyer__c</fullName>
        <label>Average Age of Buyer</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Price__c</fullName>
        <formula>IF(NOT(ISNULL( Min_Price__c )||Min_Price__c == 0||ISNULL( Max_Price__c )||Min_Price__c == 0), (Min_Price__c + Max_Price__c)/2, IF(NOT(ISNULL( Min_Price__c)||Min_Price__c == 0), Min_Price__c, IF(NOT(ISNULL(Max_Price__c) || Max_Price__c == 0), Max_Price__c, 0)))</formula>
        <label>Average Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Price_calc__c</fullName>
        <formula>IF(NOT(ISNULL( Min_Price_calc__c )||ISNULL( Max_Price_calc__c )), Sum_Plan_Prices__c / Count_Plan_Prices__c, IF(NOT(ISNULL( Min_Price_calc__c)), Min_Price_calc__c, IF(NOT(ISNULL(Max_Price_calc__c)), Max_Price_calc__c, 0)))</formula>
        <inlineHelpText>Average of Plan Prices</inlineHelpText>
        <label>Average Price (calc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Price_display__c</fullName>
        <formula>IF (ISBLANK(Average_Price_calc__c)||Average_Price_calc__c = 0, Average_Price__c, Average_Price_calc__c)</formula>
        <label>Average Price (display)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BHI_Builder_Name__c</fullName>
        <label>BHI Builder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHI_Masterplan__c</fullName>
        <label>BHI Masterplan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Co_Op_Incentives_Unchanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker Co-Op Incentives Unchanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Co_Op_Incentives__c</fullName>
        <label>Broker Co-Op Incentives</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Builder_Logo_URL__c</fullName>
        <formula>Builder__r.Builder_Logo_URL__c</formula>
        <inlineHelpText>Displayed from Builder</inlineHelpText>
        <label>Builder Logo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Builder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Builder</label>
        <referenceTo>Builder__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBSA__c</fullName>
        <inlineHelpText>Automatically populated from google</inlineHelpText>
        <label>CBSA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_Center_Disposition__c</fullName>
        <label>Call Center Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BAD NUMBER</fullName>
                </value>
                <value>
                    <fullName>BUSY</fullName>
                </value>
                <value>
                    <fullName>BUSY SIGNAL</fullName>
                </value>
                <value>
                    <fullName>CALLBACK - UNSCHEDULED</fullName>
                </value>
                <value>
                    <fullName>COMPLETED SURVEY</fullName>
                </value>
                <value>
                    <fullName>DO NOT CALL</fullName>
                </value>
                <value>
                    <fullName>HANG UP</fullName>
                </value>
                <value>
                    <fullName>NO ANSWER</fullName>
                </value>
                <value>
                    <fullName>NO PROJECT</fullName>
                </value>
                <value>
                    <fullName>NOT RETURNED BY CC</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>PARTIAL SURVEY</fullName>
                </value>
                <value>
                    <fullName>SOLD OUT</fullName>
                </value>
                <value>
                    <fullName>UNASSIGNED</fullName>
                </value>
                <value>
                    <fullName>UNCOOPERATIVE/NOT INTERESTED</fullName>
                </value>
                <value>
                    <fullName>WRONG NUMBER</fullName>
                </value>
                <value>
                    <fullName>-- Other --</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Center_Notes__c</fullName>
        <label>Call Center Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City_Matches__c</fullName>
        <formula>IF(NOT(ISBLANK(City__c)), City__c == City_calc__c, TRUE)</formula>
        <label>City Matches?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City (legacy)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_calc__c</fullName>
        <inlineHelpText>Automatically populated from Google</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Costs__c</fullName>
        <label>Closing Costs (Incentives)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closing_data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When a project refuses to cooperate and multiple attempts have been made, closing data can be used to track sales activity.</inlineHelpText>
        <label>Sales based on closing data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cluster_Type__c</fullName>
        <label>Cluster Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alley-Load</fullName>
                </value>
                <value>
                    <fullName>Motor Court</fullName>
                </value>
                <value>
                    <fullName>4-Pack</fullName>
                </value>
                <value>
                    <fullName>5-Pack</fullName>
                </value>
                <value>
                    <fullName>6-Pack</fullName>
                </value>
                <value>
                    <fullName>7-Pack</fullName>
                </value>
                <value>
                    <fullName>8-Pack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_Plan_Prices__c</fullName>
        <description>Count of plans with prices for Average price calculation</description>
        <label>Count Plan Prices</label>
        <summaryFilterItems>
            <field>Plan__c.Display_in_Zonda__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Plan__c.Price__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Plan__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Plans__c</fullName>
        <label>Count of Plans</label>
        <summaryForeignKey>Plan__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>County_Matches__c</fullName>
        <formula>IF (NOT(ISBLANK(County__c)), SUBSTITUTE(County__c, &apos; County&apos;, &apos;&apos;) == SUBSTITUTE(County_calc__c, &apos; County&apos;, &apos;&apos;), TRUE)</formula>
        <label>County Matches?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County (legacy)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_calc__c</fullName>
        <inlineHelpText>Automatically populated from Google</inlineHelpText>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Homes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Project_Key__c</fullName>
        <description>Only used for SQL Server to keep static references to rows of Projects</description>
        <displayFormat>{000000}</displayFormat>
        <label>DB Project Key</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Data_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To assign a Project to a specific Data User record so it will appear in their queue.</inlineHelpText>
        <label>Data User</label>
        <referenceTo>Data_User__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Price_History_in_Zonda__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display Price History in Zonda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Sales_History_in_Zonda__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display Sales History in Zonda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_in_Zonda__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display in Zonda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Special__c</fullName>
        <label>Email/Special</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Sold_Out_Date__c</fullName>
        <formula>IF (NOT(ISBLANK(Sales_Rate_calc__c))&amp;&amp;NOT(ISBLANK(Total_Remaining_calc__c))&amp;&amp;Total_Remaining_calc__c &gt; 0&amp;&amp;((Total_Remaining_calc__c / Sales_Rate_calc__c)*30)&lt;36000, TODAY() + ((Total_Remaining_calc__c / Sales_Rate_calc__c)*30), IF(NOT(ISBLANK(Sold_Out_Date__c)), Sold_Out_Date__c, NULL))</formula>
        <inlineHelpText>This field is calculated using the sales rate and the remaining units</inlineHelpText>
        <label>Estimated Sold Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <label>FIPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geocode_Type_calc__c</fullName>
        <inlineHelpText>Automatically populated from Google</inlineHelpText>
        <label>Geocode Type (calc)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_2_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly HOA #2 N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HOA_2__c</fullName>
        <inlineHelpText>This is a secondary HOA monthly fee.</inlineHelpText>
        <label>Monthly HOA #2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HOA_Description__c</fullName>
        <label>HOA Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly HOA #1 N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HOA__c</fullName>
        <label>Monthly HOA #1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Historical_Audit__c</fullName>
        <inlineHelpText>The Historical Meyers Audit Information</inlineHelpText>
        <label>Historical Audit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incentive_Options__c</fullName>
        <label>Incentive Options</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentives_Options_Upgrades_Percent__c</fullName>
        <label>Incentives Options/Upgrades (%)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Incentives_Options_Upgrades_USD__c</fullName>
        <label>Incentives Options/Upgrades ($)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Plan_Update_Date__c</fullName>
        <label>Last Plan Update Date</label>
        <summarizedField>Plan__c.Last_Updated_Date_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Plan__c.Display_in_Zonda__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Plan__c.Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Price_Update_display__c</fullName>
        <description>This field is what we&apos;ll show for the Last Price Update Date in Zonda and Zonda Analytics</description>
        <formula>IF(NOT(ISBLANK(Last_Plan_Update_Date__c)), IF(Last_Plan_Update_Date__c &gt; Last_Updated_Date_Price__c||ISBLANK(Last_Updated_Date_Price__c), Last_Plan_Update_Date__c, Last_Updated_Date_Price__c),  Last_Updated_Date_Price__c   )</formula>
        <inlineHelpText>This field is what we&apos;ll show for the Last Price Update Date in Zonda and Zonda Analytics</inlineHelpText>
        <label>Last Price Update (display)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Review__c</fullName>
        <formula>IF( BLANKVALUE(Most_Recent_Approved_PUR_Date__c,DATE(1900, 01, 01)) &gt; BLANKVALUE(Last_Updated_Date_Sales__c,DATE(1900, 01, 01)) &amp;&amp; BLANKVALUE(Most_Recent_Approved_PUR_Date__c, DATE(1900, 01, 01)) &gt; BLANKVALUE(DATEVALUE(CreatedDate),DATE(1900, 01, 01)), Most_Recent_Approved_PUR_Date__c, IF(ISBLANK(Last_Updated_Date_Sales__c), DATEVALUE(CreatedDate), Last_Updated_Date_Sales__c))</formula>
        <label>Last Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Update_User_Price__c</fullName>
        <label>Last Update User (Price)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update_User_Sales__c</fullName>
        <label>Last Update User (Sales)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_Broker_Co_Cop_Incenti__c</fullName>
        <label>Last Updated Date (Broker Co-Op)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_Price__c</fullName>
        <label>Last Updated Date (Price)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_Quick_Move_Incentives__c</fullName>
        <label>Last Updated Date (Quick Move)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_Sales__c</fullName>
        <label>Last Updated Date (Sales)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_To_Be_Built_Incentive__c</fullName>
        <label>Last Updated Date (To Be Built)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_UUC__c</fullName>
        <inlineHelpText>Last Updated Date for # Units Under Construction</inlineHelpText>
        <label>Last Updated Date (UUC)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_UnUUC__c</fullName>
        <inlineHelpText>Last Updated Date for # Unsold Units Under Construction</inlineHelpText>
        <label>Last Updated Date (UnUUC)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated_User_UUC__c</fullName>
        <inlineHelpText>Last Updated User for # Units Under Construction</inlineHelpText>
        <label>Last Updated User (UUC)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_User_UnUUC__c</fullName>
        <inlineHelpText>Last Updated User for # Unsold Units Under Construction</inlineHelpText>
        <label>Last Updated User (UnUUC)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Lot_Dimension__c</fullName>
        <label>Lot Dimension</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Width_variations__c</fullName>
        <label>Lot Width(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>37</fullName>
                </value>
                <value>
                    <fullName>38</fullName>
                </value>
                <value>
                    <fullName>39</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>41</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
                <value>
                    <fullName>43</fullName>
                </value>
                <value>
                    <fullName>44</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>46</fullName>
                </value>
                <value>
                    <fullName>47</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>49</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>51</fullName>
                </value>
                <value>
                    <fullName>52</fullName>
                </value>
                <value>
                    <fullName>53</fullName>
                </value>
                <value>
                    <fullName>54</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>56</fullName>
                </value>
                <value>
                    <fullName>57</fullName>
                </value>
                <value>
                    <fullName>58</fullName>
                </value>
                <value>
                    <fullName>59</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Plan_Community__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Master Plan (Community)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Community__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Master Plan</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Projects - Master Plan</relationshipLabel>
        <relationshipName>Projects_Master_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Plan</label>
        <referenceTo>Master_Plan__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Num_of_Stories__c</fullName>
        <label>Max # of Stories</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Price__c</fullName>
        <label>Max Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Price_calc__c</fullName>
        <label>Max Price (calc)</label>
        <summarizedField>Plan__c.Price__c</summarizedField>
        <summaryFilterItems>
            <field>Plan__c.Display_in_Zonda__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Plan__c.Price__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Plan__c.Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Price_display__c</fullName>
        <formula>IF (ISBLANK(Max_Price_calc__c), Max_Price__c, Max_Price_calc__c)</formula>
        <label>Max Price (display)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Unit_Size__c</fullName>
        <label>Max Unit Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Unit_Size_calc__c</fullName>
        <label>Max Unit Size (calc)</label>
        <summarizedField>Plan__c.Square_Footage__c</summarizedField>
        <summaryFilterItems>
            <field>Plan__c.Display_in_Zonda__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Plan__c.Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Unit_Size_display__c</fullName>
        <formula>IF (ISBLANK(Max_Unit_Size_calc__c) || Max_Unit_Size_calc__c = 0, Max_Unit_Size__c, Max_Unit_Size_calc__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Unit Size (display)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metrostudy_SubdivisionUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is a unique ID for Metrostudy&apos;s Weekly Sales and Traffic Report</description>
        <inlineHelpText>This is a unique ID for Metrostudy&apos;s Weekly Sales and Traffic Report</inlineHelpText>
        <label>Metrostudy SubdivisionUID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MeyersNotesCounter__c</fullName>
        <label>Meyers Notes Available Characters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meyers_Disposition__c</fullName>
        <label>Meyers Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Archive</fullName>
                </value>
                <value>
                    <fullName>Baselined</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
                <value>
                    <fullName>Uncooperative</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>--Other--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meyers_Disposition_calc__c</fullName>
        <formula>IF(NOT(ISNULL(Open_Date__c)) 
&amp;&amp; NOT(ISNULL(Total_Units_Sold__c)) 
&amp;&amp; NOT(ISNULL(Total_Units_Planned__c)) 
&amp;&amp; NOT(ISNULL(Min_Unit_Size_display__c)) 
&amp;&amp; Min_Price_display__c &gt; 0
    , &apos;Baselined&apos;
    , &apos;Follow Up&apos;)</formula>
        <inlineHelpText>Baselines are triggered when open date, total units sold, total units planned, unit size display and min price display are populated.</inlineHelpText>
        <label>Meyers Disposition (calc)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Notes__c</fullName>
        <label>Meyers Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meyers_Notes_internal__c</fullName>
        <label>Meyers Notes (internal)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Min_Num_of_Stories__c</fullName>
        <label>Min # of Stories</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Price__c</fullName>
        <label>Min Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Price_calc__c</fullName>
        <label>Min Price (calc)</label>
        <summarizedField>Plan__c.Price__c</summarizedField>
        <summaryFilterItems>
            <field>Plan__c.Display_in_Zonda__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Plan__c.Price__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Plan__c.Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Min_Price_display__c</fullName>
        <formula>IF (ISBLANK(Min_Price_calc__c), Min_Price__c, Min_Price_calc__c)</formula>
        <label>Min Price (display)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Unit_Size__c</fullName>
        <label>Min Unit Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Unit_Size_calc__c</fullName>
        <label>Min Unit Size (calc)</label>
        <summarizedField>Plan__c.Square_Footage__c</summarizedField>
        <summaryFilterItems>
            <field>Plan__c.Display_in_Zonda__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Plan__c.Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Min_Unit_Size_display__c</fullName>
        <formula>IF (ISBLANK(Min_Unit_Size_calc__c) || Min_Unit_Size_calc__c = 0, Min_Unit_Size__c, Min_Unit_Size_calc__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min Unit Size (display)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Open_Date__c</fullName>
        <label>Model Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_HOA_SF_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly HOA ($/SF) N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_HOA_SF__c</fullName>
        <label>Monthly HOA ($/SF)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Approved_PUR_Date__c</fullName>
        <description>This will be the MAX Approve PUR date -- used to determine the next ZIC Date.</description>
        <label>Most Recent Approved PUR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multiple_Attempts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Multiple attempts have been made to reach this project.</inlineHelpText>
        <label>Multiple Attempts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Neighborhood_Community__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Neighborhood</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Community__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Neighborhood</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Projects - Neighborhood</relationshipLabel>
        <relationshipName>Projects_Neighborhood</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Neighborhood_calc__c</fullName>
        <inlineHelpText>Automatically populated from Google</inlineHelpText>
        <label>Neighborhood (calc)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Times_Auto_Approved_Set__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No Of Times Auto Approved Set</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>